CS403/grammar.txt
statements				: statement statements
						| *empty*
						
statement				: expression
						| variableDef
						| functionDef
						| classDef
						| objectDef
						| conditional
						| include
						| comment

expression				: unary expression
						| *empty*

variableDef				: keyword:variable VARIABLE initializerExpression

functionDef				: keyword:function VARIABLE parameterExpression block

arrayDef				: keyword:array	VARIABLE initializerExpression

classDef				: keyword:class	VARIABLE block

objectDef				: keyword:object VARIABLE initializerExpression

conditional				: ifStatement
						| whileLoop

include					: keyword:include STRING

comment					: OPEN_BRACKET *anything* CLOSE_BRACKET

unary					: INTEGER
						| REAL
						| STRING
						| anonymousExpression
						| objectExpression
						| variableExpression
						
initializerExpression	: OPEN_PAREN expression CLOSE_PAREN

parameterExpression		: OPEN_PAREN optParameterList CLOSE_PAREN

block					: OPEN_BRACE statements CLOSE_BRACE

ifStatement				: keyword:if OPEN_PAREN expression CLOSE_PAREN block optElse

whileLoop				: keyword:while OPEN_PAREN expression CLOSE_PAREN block

anonymousExpression		: anonymousDefine
						| anonymousCall
						
objectExpression		: VARIABLE DOT VARIABLE
						| VARIABLE DOT VARIABLE objectExpression
						| VARIABLE DOT VARIABLE objectAssign
						| VARIABLE DOT VARIABLE initializerExpression

variableExpression		: VARIABLE optionalVariableAssign
						| VARIABLE initializerExpression
						
optParameterList		: VARIABLE optParameterList
						| *empty*

optElse					: keyword:else block
						: keyword: else ifStatement
						| *empty*		
						
anonymousDefine			: keyword:anonymous parameterExpression block

anonymousCall			: OPEN_PAREN keyword:anonymous parameterExpression block initializerExpression CLOSE_PAREN
						
optionalVariableAssign	: ASSIGN UNARY
						| *empty*
						
objectAssign			: ASSIGN UNARY
						| ASSIGN CLASS
